# stump

./: .gitignore  .npmrc  .prettierignore  Cargo.toml  FORK_BACKLOG.md  README.md  eslint.config.mjs  flake.nix  package.json  prettier.config.js
.cargo/: config.toml
.github/: CHANGELOG.md  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/build-desktop/: action.yml
.github/actions/build-docker/: action.yml
.github/actions/build-server/: action.yml
.github/actions/build-web/: action.yml
.github/actions/coverage/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-yarn/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: build_nix.yml  ci.yaml  cve_check.yml  experimental.yml  label_issue.yml  nightly.yml  release_binary.yml  release_desktop.yml  release_docker.yml  unstable.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  Home.tsx  SavedServerEntry.tsx  splash-screen.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/store/: app_store.rs
apps/docs/: globals.css  package.json  theme.config.tsx
apps/docs/components/: DownloadLinks.tsx  Feedback.tsx  Footer.tsx  HelpDocsCTA.tsx  Hero.tsx  InlineIconButton.tsx  LandingPage.tsx  MobileApp.tsx  NavBar.tsx  StumpLogo.tsx
apps/expo/: app.config.ts  global.css  index.js  package.json  tsconfig.json
apps/expo/app/: _layout.tsx
apps/server/: Cargo.toml  build.rs
apps/web/: package.json  vite.config.ts
core/: Cargo.toml  README.md  build.rs
core/benches/benchmarks/: library_scanner.rs
core/src/: context.rs  database.rs  error.rs  event.rs  lib.rs
core/src/config/: logging.rs  oidc_config.rs  stump_config.rs
core/src/database/: connect.rs  mod.rs  pool_monitor.rs
core/src/filesystem/: common.rs  mod.rs
core/src/filesystem/image/: cover_placeholder.rs  mod.rs
core/src/filesystem/image/thumbnail/: generate.rs  generation_job.rs  placeholder_job.rs
core/src/filesystem/media/: builder.rs  metadata.rs  mod.rs  process.rs  readium.rs
core/src/filesystem/media/analysis/: analyze.rs  job.rs
core/src/filesystem/media/analyze_media_job/: mod.rs  task_analyze_dimensions.rs  task_page_count.rs
core/src/filesystem/media/format/: epub.rs  epub_writeback.rs  mod.rs  pdf.rs  rar.rs  zip.rs
core/src/filesystem/metadata/: apply.rs  fetch.rs  fetch_job.rs  mod.rs  provider_cache.rs  writeback_job.rs
core/src/filesystem/metadata/spec/: comic_info.rs  epub_opf.rs  mod.rs
core/src/filesystem/metadata/writer/: comic_info.rs  mod.rs  zip.rs
core/src/filesystem/scanner/: library_scan_job.rs  library_watcher.rs  mod.rs  series_scan_job.rs  tag_cache.rs  utils.rs  walk.rs
core/src/job/: controller.rs  error.rs  manager.rs  mod.rs  output.rs  progress.rs  run.rs  scheduler.rs  state.rs  stump_job.rs  worker.rs
core/src/kobo/: entity.rs  sync_types.rs
core/src/opds/v1_2/: entry.rs
core/src/opds/v2_0/: entity.rs  progression.rs  publication.rs
crates/cli/: Cargo.toml
crates/email/: Cargo.toml
crates/graphql/: Cargo.toml  schema.graphql
crates/graphql/src/: data.rs  guard.rs  pagination.rs  schema.rs
crates/graphql/src/filter/: media.rs  mod.rs  series.rs
crates/graphql/src/input/: library.rs  list.rs  media.rs  metadata_provider.rs  mod.rs  scheduled_job_config.rs  user.rs
crates/graphql/src/loader/: author.rs  mod.rs  reading_session.rs  series_finished_count.rs  user.rs
crates/graphql/src/mutation/: book_club_suggestion.rs  job.rs  library.rs  media.rs  media_metadata.rs  metadata_provider.rs  mod.rs  reading_progress.rs  scheduled_job_config.rs  series.rs  series_metadata.rs  server_config.rs  smart_list_view.rs  smart_lists.rs  tag.rs  upload.rs  user.rs
crates/graphql/src/mutation/emailer/: emailer.rs  sender.rs
crates/graphql/src/object/: author.rs  book_club_member.rs  job_schedule_config.rs  library.rs  list.rs  media.rs  media_metadata.rs  metadata_fetch_record.rs  missing_entity.rs  mod.rs  reading_session.rs  readthrough_record.rs  resume_reading_cursor.rs  series.rs  series_metadata.rs  smart_lists.rs  stats.rs  user.rs
crates/graphql/src/query/: author.rs  book_club.rs  book_club_discussion.rs  filesystem.rs  job.rs  library.rs  list.rs  media.rs  metadata_provider.rs  mod.rs  smart_lists.rs  smart_lists_builder.rs  user.rs
crates/graphql/src/tests/: common.rs
crates/integrations/metadata/: .env.example  Cargo.toml
crates/integrations/metadata/src/: client.rs  error.rs  lib.rs  provider.rs  rate_limit.rs  scoring.rs  serde_utils.rs
crates/integrations/metadata/src/merge/: config.rs  merger.rs  mod.rs
crates/integrations/metadata/src/providers/: anilist.rs  hardcover.rs  mod.rs
crates/integrations/metadata/src/providers/comic_vine/: client.rs
crates/integrations/metadata/src/types/: entities.rs  enums.rs  match_candidate.rs  metadata.rs  mod.rs  query.rs
crates/migrations/: Cargo.toml
crates/models/: Cargo.toml
crates/models/src/: db.rs  lib.rs
crates/models/src/domain/: reading_progress.rs
crates/models/src/entity/: book_club_member.rs  content_access_rule.rs  device_public_key.rs  library.rs  library_config.rs  library_path.rs  list.rs  list_media.rs  list_user.rs  media.rs  media_metadata.rs  metadata_fetch_record.rs  metadata_provider_config.rs  mod.rs  reading_device.rs  reading_journal_entry.rs  reading_list.rs  reading_session.rs  review.rs  scanned_directory.rs  scheduled_job.rs  series.rs  series_merge.rs  series_metadata.rs  server_config.rs  session.rs  smart_list.rs  smart_list_user.rs  smart_list_view.rs  user.rs  user_login_activity.rs  user_preferences.rs
crates/models/src/services/: mod.rs  reading_progress.rs
crates/models/src/shared/: enums.rs  mod.rs  permission_set.rs  readium.rs  shared_access.rs
crates/models/src/tests/: common.rs
docker/: Dockerfile  build.sh
patches/: expo-router+55.0.14.patch  react-native-screens+4.24.0.patch
(+377 files in other folders)
