[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "apps/server",
  "core",
  "crates/*",
  "crates/macros/*",
]
exclude = [
  "crates/macros/Cargo.toml",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.92.0"

[workspace.dependencies]
alphanumeric-sort = "1.5.3"
async-graphql = { version = "7.2.1", features = ["chrono", "decimal", "dynamic-schema", "dataloader"] }
async-graphql-axum = "7.2.1"
async-trait = "0.1.89"
async-stream = "0.3.6"
axum = { version = "0.8.6", features = [
  "ws",
  "multipart",
] }
base64 = "0.22.1"
data-encoding = "2.9.0"
bcrypt = "0.17.1"
rust_decimal = "1.38.0"
derive_builder = "0.20.2"
derivative = "2.2.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
globset = "0.4.16"
infer = "0.19.0"
itertools = "0.14.0"
heck = "0.5.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lettre = { version = "0.11.18", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tracing",
  "tokio1-rustls-tls",
] }
md5 = "0.8.0"
num-traits = "0.2.19"
prefixed-api-key = { version = "0.3.0", features = ["sha2"] }
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = [ "json", "rustls-tls" ] }
sea-orm = { version = "1.1.16", features = [
  "mock",
  "macros",
  "sqlx-sqlite",
  "sqlite-use-returning-for-3_35",
  "runtime-tokio-native-tls",
  "debug-print",
] }
sea-orm-migration = { version = "1.1.16", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
simple_crypt = "0.2.3"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
  # Provides sender/reciever channels
  "sync",
  # Tells the Tokio runtime to use the multi-thread scheduler.
  "rt-multi-thread",
  # Allows handling shutdown signals (e.g., ctrl+c)
  "signal",
  "macros"
] }
toml = "0.9.7"
tower-sessions = "0.14.0"
tracing = "0.1.41"
urlencoding = "2.1.3"
# Required for macro crates
proc-macro2 = "1.0.101"
quote = "1.0.41"
slugify = "0.1.0"
syn = "2.0.106"
# Note: We need to keep this downgraded for the time being. See https://github.com/stumpapp/stump/issues/427#issuecomment-2332857700
# TODO: I want to update since the latest is in the 5.x.x range now and don't want to lag. I need to test against the above ^
zip = { version = "=1.1.3", features = ["deflate"], default-features = false }
# TODO: Use danigm/epub-rs once PR merged: https://github.com/danigm/epub-rs/pull/57
epub = { git = "https://github.com/stumpapp/epub-rs", rev = "baf89d1", features = ["mock"] }
uuid = { version = "1.18.1", features = ["v4"] }
tokio-test = "0.4.4"
pretty_assertions = "1.4.1"

# Only used to test with sea-orm
maplit = { version = "1.0.2" }
