[package]
name = "stump_core"
version.workspace = true
edition = "2021"

[dependencies]
alphanumeric-sort.workspace = true
apalis.workspace = true
apalis-cron.workspace = true
notify = "8.0.0"
async-channel = "2.1.0"
async-trait.workspace = true
chrono.workspace = true
cron = "0.15.0"
dashmap = "6.1.0"
tokio-util = "0.7.10"
async-graphql.workspace = true
data-encoding = "2.5.0"
rust_decimal.workspace = true
ab_glyph = "0.2.29"
derive_builder.workspace = true
derivative.workspace = true
dirs = "5.0.1"
email = { path = "../crates/email" }
epub.workspace = true
futures.workspace = true
globset = "0.4.14"
image = { version = "0.25.2" }
imagesize = "0.14.0"
infer.workspace = true
itertools.workspace = true
metadata_integrations = { path = "../crates/integrations/metadata" }
migrations = { path = "../crates/migrations" }
models = { path = "../crates/models" }
md5.workspace = true
rand.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde-xml-rs = "0.6.0" # Support for XML serialization/deserialization
serde_json.workspace = true
serde_with.workspace = true
simple_crypt.workspace = true
stump-config-gen = { path = "../crates/macros/stump-config-gen"}
tokio.workspace = true
toml.workspace = true
trash = "3.1.2"
pdf = "0.9.1"
pdfium-render = "0.8.24"
prefixed-api-key = { workspace = true}
rayon = "1.10.0"
regex.workspace = true
ring = "0.17.8"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
unrar = { version = "0.5.6" }
urlencoding.workspace = true
uuid.workspace = true
walkdir = "2.5.0"
webp = "0.3.0"
xml-rs = "1.0.0" # XML reader/writer
zip.workspace = true
quick-xml = { version = "0.38.3", features = ["serialize"] }
merge = "0.1.0"
kmeans_colors = "0.7.1"
palette = "0.7.6"
thumbhash = "0.1.0"
base64.workspace = true

[dev-dependencies]
temp-env = "0.3.6"
tempfile.workspace = true
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tests = { path = "../crates/tests" }

[build-dependencies]
chrono.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.152"

[[bench]]
name    = "bench_main"
harness = false
