[package]
name = "models"
edition = "2021"

[dependencies]
async-graphql.workspace = true
chrono.workspace = true
globset.workspace = true
itertools.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
slugify.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

filter-gen = { path = "../../crates/macros/filter-gen" }
# Raw FFI to register custom SQLite functions (Unicode-aware lower); the
# version must stay in lockstep with the one sqlx-sqlite links against
libsqlite3-sys = "0.30"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
