[package]
name = "metadata_integrations"
version = "0.0.8"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dateparser = "0.2.1"
governor = "0.6"
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = "0.11"
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { workspace = true }
